--- a/front-angular/src/index.html
+++ b/front-angular/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="bg-neutral-900 text-white/90">
   <app-root></app-root>
 </body>
 </html>
